<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.askel.recipes.MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fridgebut"
        android:layout_centerInParent="true"
        android:text="@string/TO_FRIDGE"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fridgebut"
        android:layout_centerInParent="true"
        android:id="@+id/shopbut"
        android:text="@string/TO_SHOP"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shopbut"
        android:layout_centerInParent="true"
        android:id="@+id/recipebut"
        android:text="@string/TO_RECIPE"/>


</RelativeLayout>
