<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.askel.recipes.ShopActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fromshop"
        android:text="@string/TO_MENU"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/additem_et"
        android:layout_below="@id/fromshop"
        android:textColor="#42f4eb"
        android:hint="@string/ADD_ITEM"
        android:textColorHint="#42f4eb"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/additem_et"
        android:id="@+id/additem_but"
        android:text="@string/ADD"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shoplist"
        android:layout_below="@id/additem_but"
        >
    </ListView>

</RelativeLayout>
