<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.askel.recipes.FridgeActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fromfridge"
        android:text="@string/TO_MENU"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addfood_et"
        android:layout_below="@id/fromfridge"
        android:layout_centerHorizontal="true"
        android:textColor="#42f4eb"
        android:textColorHint="#42f4eb"
        android:hint="@string/ADD_ITEM"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addfood_et"
        android:id="@+id/addfood_but"
        android:layout_centerHorizontal="true"
        android:text="@string/ADD"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/foodlist"
        android:layout_below="@id/addfood_but">

    </ListView>

</RelativeLayout>
